--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "event": "Не чули про хуй Стеця",
-    "startTime": "31 Aug 2023 20:00:00 GMT"
+    "event": "Купр в пошуках роботи",
+    "startTime": "12 Apr 2024 20:00:00 GMT"
 }
